src/style/global.scss
@mixin theme(
  $bg-color: #f1fafc,
  $main-color: #1c1c1e,
  $secondary-color: darkBlue
) {
  // Global
  #body {
    margin: 0;
    padding: 0;
    min-height: 100vh;
    max-width: 100vw !important;
    color: $main-color;
    background-color: $bg-color;
    font-family: -apple-system, BlinkMacSystemFont, Roboto, Ubuntu, "Open Sans",
      "Helvetica Neue", sans-serif;
  }
  // Navigation Bar & Footer
  nav {
    width: 80%;
    margin: auto;
    display: flex;
    align-items: center;
    justify-content: space-between;

    ul {
      list-style: none;
      display: inline-flex;
      align-items: center;

      li {
        display: inline;
        margin-right: 50px;

        a {
          color: $main-color;
          text-decoration: none;
          &:hover {
            color: $secondary-color;
          }
        }
      }
    }
    button {
      padding: 13px 20px;
      color: $bg-color !important;
      background: $main-color !important;
      border-radius: 14px;
      border-style: none;
      font-size: 16px;
      display: inline-flex;
      align-items: center;
      justify-content: center;

      span {
        padding-left: 10px;
        display: inline;
      }
    }
  }
  header {
    padding-top: 2%;
  }
  footer {
    padding: 2% 0;
  }

  // Main content
  main {
    width: 80%;
    margin: auto;
    display: flex;
    flex-direction: column;
    height: max-content;

    h2 {
      font-size: 48px;
      margin: 4% 0;
    }

    #image-row {
      width: 100%;
      display: inline-flex;
      justify-content: space-between;
      overflow: hidden;
      margin-bottom: 24px;

      img {
        width: 264px;
        height: 264px;
        background-color: $main-color;
      }
    }
  }
}

#light-theme {
  @include theme;
}

#dark-theme {
  @include theme(
    $bg-color: #1c1c1e,
    $main-color: #f1fafc,
    $secondary-color: lightBlue
  );
}

